@@ -28,6 +28,7 @@ endif::[]
 
 [float]
 ===== Features
+* The agent now collects cgroup memory metrics (see <<metrics>>)
 * Experimental support for runtime attachment now also for OSGi containers, JBoss, and WildFly
 * New mitigation of OSGi bootdelegation errors (`NoClassDefFoundError`).
   You can remove any `org.osgi.framework.bootdelegation` related configuration.
